# nebius-demo

./: .gitignore  .gitmodules  ASSESMENT.md  CLAUDE.md  PLAN.md  README.md  REPORT.docx  REPORT.md  pyproject.toml
docs/: architecture.md  demo_script.md  monitoring.md  troubleshooting.md
eval/: compare.py  mock_tools.py  prompts.jsonl  run_comparison.slurm
eval/results/: comparison.json  comparison.md
inference/: ask.py  serve_base.sh  serve_tuned.sh  smoke_test.slurm
terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  SETUP.md  driver_presets.tf  login.sh  main.tf  terraform.tf  terraform.tfstate  terraform.tfstate.1782243123.backup  terraform.tfstate.backup  terraform.tfvars  variables.tf
training/: build_image_tl.slurm  import_image.slurm  install_swift.sh  predownload.slurm  prepare_dataset.py  run_megatron.sh  setup_env.slurm  setup_tilelang.slurm  train.slurm  validate_dataset.py  watch_gpu.sh
