[project]
name = "nebius-demo"
version = "0.1.0"
description = "Nebius CSA assignment: multi-node LLM fine-tuning for function calling on Soperator"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "tqdm>=4.68.3",
    "transformers>=5.5.0",
]
